# sarke-web

./: Cargo.toml  LICENSE  README.md  index.html
src/: app.rs  main.rs
src/routes/: home.rs  mod.rs  not_found.rs  router.rs
src/styles/: main.css
